Closed Bug 505727 Opened 15 years ago Closed 15 years ago

nsDOMClassInfo.cpp fails to compile on MinGW.

Categories

(Core :: DOM: Core & HTML, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2b1

People

(Reporter: jacek, Assigned: jacek)

References

Details

Attachments

(1 file, 1 obsolete file)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.1.1) Gecko/20090715 Firefox/3.5.1
Build Identifier: 

On MinGW jschar != PRUnichar so we have to cast it explicitly in JS_AlreadyHasOwnUCProperty call.

Reproducible: Always
Attached patch Fix (obsolete) — Splinter Review
Attachment #389930 - Flags: review?(bzbarsky)
Comment on attachment 389930 [details] [diff] [review]
Fix

reinterpret_cast, please.

r=me with that.
Attachment #389930 - Flags: review?(bzbarsky) → review+
Thanks for the review. A patch with reinterpret_cast is attached.
Attachment #389930 - Attachment is obsolete: true
Attachment #390012 - Flags: review+
Keywords: checkin-needed
Blocks: 508905
Confirming, this is required to fix bug 508905.
Assignee: nobody → jacek
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #390012 - Flags: review+
http://hg.mozilla.org/mozilla-central/rev/9acddadf6997
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2b1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: