Bug 505727 - nsDOMClassInfo.cpp fails to compile on MinGW. r=bz